# crossplatform-native-apps

./: README.md
calculator_made_in_eframe/: Cargo.toml
calculator_made_in_eframe/src/: main.rs
discord_act_setter/: Cargo.toml  readme.md
discord_act_setter/src/: app.rs  file_manager.rs  logs.rs  main.rs  settings.rs
discord_act_setter/src/backend/: mod.rs
discord_act_setter/src/backend/websocket/: mod.rs  structures.rs
discord_act_setter/src/client/: mod.rs
discord_act_setter/src/client/websocket/: error.rs  mod.rs  types.rs
discord_act_setter/src/client/websocket/read/: events.rs  mod.rs
discord_act_setter/src/client/websocket/write/: mod.rs
discord_custom_activity/: Cargo.toml
discord_custom_activity/src/: app.rs  error.rs  main.rs  settings.rs  structures.rs  websocket.rs
discord_custom_activity/src/websocket/: mod.rs  structures.rs
discord_status/: Cargo.toml  README.md
discord_status/src/: app.rs  core.rs  main.rs  structures.rs  websocket.rs
nazzy_auto/: Cargo.toml
nazzy_auto/src/: fetching.rs  main.rs  structs.rs  ui.rs
src/: app.rs  file_manager.rs  logs.rs  settings.rs
src/client/websocket/: mod.rs  structures.rs  types.rs
van_meegeren/: Cargo.toml  README  README.md
van_meegeren/src/: controllers.rs  data.rs  fetching.rs  main.rs  ui.rs
zone_launcher_mc/: README
zone_launcher_mc/zone_launcher/src/: main.rs
zone_launcher_mc/zone_updater/: Cargo.toml
zone_launcher_mc/zone_updater/src/: main.rs
