[package]
name = "discord_act_setter"
version = "1.0.0"
edition = "2024"

[dependencies]

chrono = "0.4.41"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.15"

eframe = "0.31.1"
futures = "0.3.31"


serde = { version = "1.0.219", features = ["derive"] }

serde_json = "1.0.140"
smart-default = "0.7.1"

thiserror = "2.0.12"

timer = "0.2.0"

tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
actix-web = "4.11.0"
