[package]
name = "discord_custom_activity"
version = "1.0.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
eframe = "0.31.1"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
