[package]
name = "nazzy_auto"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"

reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
smart-default = "0.7.1"
dirs = "6.0.0"
tokio = { version = "1.47.1", features = ["full"] }
