[package]
name = "van_meegeren_remake"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = { version = "0.8.3", features = ["im"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winresource = "*"
