[package]
name = "zone-updater"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["stream", "json"] }
futures = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "*"
druid = { version = "0.8.3", features = ["svg"] }
druid-widget-nursery = "0.1.0"
sha2 = "*"

[build-dependencies]
winresource = "*"

[profile.release]
opt-level = 3  